--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1 class="main-container__s2__title">FAQ</h1>
       <details class="main-container__s2__details">
         <summary class="main-container__s2__details__summary">
-          How many team members can I invite?
+          How many team members can I invite? <img class="main-container__s2__details__arrow" src="./images/icon-arrow-down.svg" alt="arrow down">
         </summary>
         <p class="main-container__s2__details__paragraph">  You can invite up to 2 additional users on the Free plan. There is no limit on 
           team members for the Premium plan.</p>
@@ -27,7 +27,7 @@
       <hr class="main-container__s2__line">
       <details class="main-container__s2__details">
         <summary class="main-container__s2__details__summary">
-          What is the maximum file upload size?
+          What is the maximum file upload size? <img class="main-container__s2__details__arrow" src="./images/icon-arrow-down.svg" alt="arrow down">
         </summary>
         <p class="main-container__s2__details__paragraph">
           No more than 2GB. All files in your account must fit your allotted storage space.
@@ -36,7 +36,7 @@
       <hr class="main-container__s2__line">
       <details class="main-container__s2__details">
         <summary class="main-container__s2__details__summary">
-          How do I reset my password?
+          How do I reset my password? <img class="main-container__s2__details__arrow" src="./images/icon-arrow-down.svg" alt="arrow down">
         </summary>
         <p class="main-container__s2__details__paragraph">
           Click “Forgot password” from the login page or “Change password” from your profile page.
@@ -46,7 +46,7 @@
       <hr class="main-container__s2__line">
       <details class="main-container__s2__details">
         <summary class="main-container__s2__details__summary">
-          Can I cancel my subscription?
+          Can I cancel my subscription? <img class="main-container__s2__details__arrow" src="./images/icon-arrow-down.svg" alt="arrow down">
         </summary>
         <p class="main-container__s2__details__paragraph">
           Yes! Send us a message and we’ll process your request no questions asked.
@@ -55,7 +55,7 @@
       <hr class="main-container__s2__line">
       <details class="main-container__s2__details">
         <summary class="main-container__s2__details__summary">
-          Do you provide additional support?
+          Do you provide additional support? <img class="main-container__s2__details__arrow" src="./images/icon-arrow-down.svg" alt="arrow down">
         </summary>
         <p class="main-container__s2__details__paragraph">
           Chat and email support is available 24/7. Phone lines are open during normal business hours.
